[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Dice.gd" type="Script" id=1]
[ext_resource path="res://Entities/Assets/hammer.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Entities/Assets/Enemies/EnemyBaseColor.material" type="Material" id=3]
[ext_resource path="res://map/Assets/OuterTile.tres" type="Material" id=4]

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 10.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Hammer:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.3, -1.00731, -16.1206, -0.5, -0.482254, 0.9, -1.44676, 71.9997, -0.25, 0, 0.5, 0.0340118, 72, 0, 0, 0.5, -18.1041, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.6, 3.2, 3.3, 10 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Hammer:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray( 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Hammer:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Hammer:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 10 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Hammer:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.55, -0.4, -0.00846684, 0.25, 0, 0.55, -0.25, 0, 2.9591, 0.384109, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1, 1.3, 3.2, 10 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Hammer:scale:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 10 )
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 10.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("MeshRoot:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MeshRoot:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, 0, 0, 1, 0, 2, -2.5, 0, 2.5, 0, 0, -1, 0, 0, 0 ),
"times": PoolRealArray( 2, 5.2, 8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MeshRoot:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MeshRoot:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("MeshRoot:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 3, 5, 7, 9, 10 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("MeshRoot:scale:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}

[node name="Dice" type="KinematicBody" groups=["Die"]]
script = ExtResource( 1 )

[node name="MeshRoot" type="Spatial" parent="."]

[node name="OmniLight" type="OmniLight" parent="MeshRoot"]
omni_range = 7.27278

[node name="HammerRoot" type="Spatial" parent="MeshRoot"]
visible = false

[node name="Hammer" type="MeshInstance" parent="MeshRoot/HammerRoot"]
transform = Transform( 0.55, 0, 0, 0, 0, 0, 0, 0, 0.55, 0, 0, 0 )
mesh = ExtResource( 2 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )
material/1 = ExtResource( 3 )

[node name="HitAnimation" type="AnimationPlayer" parent="MeshRoot/HammerRoot/Hammer"]
root_node = NodePath("../..")
playback_speed = 7.74
method_call_mode = 1
anims/Hit = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="MoveTween" type="Tween" parent="."]

[node name="JumpAnimation" type="AnimationPlayer" parent="."]
playback_speed = 40.0
anims/move = SubResource( 3 )

[connection signal="animation_finished" from="MeshRoot/HammerRoot/Hammer/HitAnimation" to="." method="_on_HitAnimation_animation_finished"]
[connection signal="tween_all_completed" from="MoveTween" to="." method="_on_RotateTween_tween_all_completed"]
[connection signal="tween_step" from="MoveTween" to="." method="_on_RotateTween_tween_step"]
